--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
 
 services:
     slim:
-        image: php:7-alpine
+        build: docker/php
         working_dir: /var/www
         command: php -S 0.0.0.0:8080 -t public
         environment:
@@ -16,3 +16,19 @@ services:
         volumes:
             - .:/var/www
             - logs:/var/www/logs
+        links:
+            - db
+    db:
+        image: mysql:8.0
+        command: --default-authentication-plugin=mysql_native_password
+        restart: always
+        environment:
+            MYSQL_ROOT_PASSWORD: rootpass
+            MYSQL_DATABASE: testdb
+            MYSQL_USER: testusr
+            MYSQL_PASSWORD: testpass
+        ports:
+            - 3307:3306
+        volumes:
+            - ./database:/var/lib/mysql
+
